--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewData["Title"] - Test</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        .btn-std{
+            width:140px;
+        }
+    </style>
 </head>
 <body>
     <header>
